--- a/services.html
+++ b/services.html
@@ -174,7 +174,7 @@
                     <div class="single_feature">
                         <div class="single_service single_service_2">
                                 <span class="flaticon-ui"></span>
-                            <h4>Job Opportunity</h4>
+                            <h4>Reactivation of Power Generating sets</h4>
                             <p>Set have great you male grasses yielding yielding first their to called deep
                                 abundantly Set have great you male</p>
                             <a href="#" class="btn_3">read more</a>
