changed index and services

--- a/services.html
+++ b/services.html
@@ -177,7 +177,7 @@
                             <h4>Reactivation of Power Generating sets</h4>
                             <p>Set have great you male grasses yielding yielding first their to called deep
                                 abundantly Set have great you male</p>
-                            <a href="#" class="btn_3">read more</a>
+                            <a href="#img-gallery" class="btn_3">read more</a>
                         </div>
                     </div>
                 </div>
@@ -185,6 +185,53 @@
         </div>
     </section>
     <!--services part end-->
+
+    <!--
+    <div class="section-top-border">
+         <h3 id="img-gallery" class="mb-30">services</h3>
+        <div class="row gallery-item">
+            <div class="col-md-4">
+                <a href="img/diesel3.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/diesel3.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="img/diesel7.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/diesel7.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="img/elements/g3.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/elements/g3.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-6">
+                <a href="img/elements/g4.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/elements/g4.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-6">
+                <a href="img/elements/g5.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/elements/g5.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="img/elements/g6.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/elements/g6.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="img/elements/g7.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/elements/g7.jpg);"></div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="img/elements/g8.jpg" class="img-pop-up">
+                    <div class="single-gallery-image" style="background: url(img/elements/g8.jpg);"></div>
+                </a>
+            </div>
+        </div>
+    </div>
 
     <!-- review part start-->
     <section class="review_part section_padding margin_bottom">
