--- a/services.html
+++ b/services.html
@@ -51,21 +51,21 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="services.html">services</a>
                                 </li> 
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="blog.html">Blog</a>
-                                 <!--
+                                
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Pages
+                                        Inventory
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="project.html">project</a>
-                                        <a class="dropdown-item" href="project_details.html">project details</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                                        <a class="dropdown-item" href="newGen.html">New Generators</a>
+                                        <a class="dropdown-item" href="usedGen.html">Used and Certified Generators</a>
+                                        <a class="dropdown-item" href="renewableEnergy.html">Renewable energy</a>
+                                        <!--
                                         <a class="dropdown-item" href="elements.html">Elements</a>
+                                        <a class="dropdown-item" href="gallery.html">Gallery</a>
+                                        -->
                                     </div>
                                 </li>
-                            -->
                             <li class="nav-item">
                                     <a class="nav-link" href="gallery.html">Gallery</a>
                                 </li>
