--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="col-md-6 col-lg-6">
                     <div class="about_part_img">
-                        <img src="img/experiance_img.png" alt="">
+                        <img src="img/experience1.jpg" alt="">
                     </div>
                 </div>
             </div>
