--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
                 </div>
                 <div class="col-md-6 col-lg-5">
                     <div class="about_part_text">
-                        <h2>Engineering Your
-                            Dreams With Us</h2>
+                        <h2>Lets Light  
+                            Your World</h2>
                         <p>Which cattle fruitful he fly visi won't let above lesser stars. Fly form wonder every let third form two air seas after us said day won light also  together midst two female she great to open.</p>
                         <ul>
                             <li>
