added google maps

--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-6 col-lg-6">
                     <div class="about_part_text">
-                        <h2>We Are Experienced in Power Generation and Supply</h2>
+                        <h2>We Are Experienced in Power Generation </h2>
 						<p>
 							DIVINE POWER PRODUCTS is a Power generation company established in 2004 with the goal to provide a pragmatic approach to solving the incessant power problems the country Nigeria is facing.
 						</p>
