--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-6 col-xl-6">
                     <div class="banner_text">
                         <div class="banner_text_iner">
-                            <h1>Delivering <span>Reliable</span> Power Supply</h1>
+                            <h1>Delivering <span>Reliable</span> Power </h1>
                             <p>Providing efficient, Cost effective and Reliable power <br> using modern technology to millions in West Africa</br></p>
                                 
                             <a href="services.html" class="btn_1">Our Services </a>
@@ -221,7 +221,7 @@
                 <div class="col-md-6 col-lg-6">
                     <div class="about_part_text">
 						<a class="nav-link" href="about.html">
-                        	<h2>We Are Experienced in Power Generation and Supply
+                        	<h2>We Are Experienced in Power Generation 
 							</h2>
 						</a>
 						
