--- a/contact.html
+++ b/contact.html
@@ -141,10 +141,13 @@
     <!-- breadcrumb start-->
 
 
-  <!-- ================ contact section start ================= -->
+   <!--================ contact section start ================= --> 
   <section class="contact-section section_padding">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
+        
+          <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=1b%20Omorinre%20Johnson%20Close%2C%20Lekki%20phase%201%2CLagos&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.bitgeeks.net"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+        <!--
         <div id="map" style="height: 480px;"></div>
         <script>
           function initMap() {
@@ -274,14 +277,14 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3>+234 812 567 4557</h3>
+                <a href = "tel: +234 (812) 567 4557"><h3>+234 812 567 4557</h3></a>
               <p>Mon to Fri 9am to 6pm</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3>info@divinepowerproducts.ng</h3>
+                <a href= "mailto: <divinepowerproducts>info@divinepowerproducts.ng"><h3>info@divinepowerproducts.ng</h3></a>
               <p>Send us your query anytime!</p>
             </div>
           </div>
